--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ j2ee.platform.classpath=${j2ee.server.home}/modules/system/layers/base/javax/ent
 j2ee.server.type=WildFly
 jar.compress=false
 javac.classpath=\
-    ${file.reference.hibernate-annotations.jar}
+    ${file.reference.hibernate-annotations.jar}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
