--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.hibernate-annotations.jar=E:\\Java\\hibernate-annotations.jar
+file.reference.jackson-all-1.9.9.jar=E:\\Java\\jackson-all-1.9.9.jar\\jackson-all-1.9.9.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,7 +41,8 @@ j2ee.server.type=WildFly
 jar.compress=false
 javac.classpath=\
     ${file.reference.hibernate-annotations.jar}:\
-    ${libs.spring-framework400.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.jackson-all-1.9.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
